src/datamodel/main/default/objects/Driver_Care_Settings__mdt/fields/Default_Return_to_work_days__c.field-meta.xml
<CustomField>
    <fullName>Default_Return_to_work_days__c</fullName>
    <defaultValue>14</defaultValue>
    <description>The number of days to add to the Work Stoppage Date to determine the Estimated Return to work date</description>
    <label>Default Return to work days</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>