src/datamodel/main/default/objects/Driver_Care_Settings__mdt/fields/Driver_Case_Queue_Id__c.field-meta.xml
<CustomField>
    <fullName>Driver_Case_Queue_Id__c</fullName>
    <label>Driver Case Queue Id</label>
    <length>15</length>
    <type>Text</type>
</CustomField>